--- a/about.html
+++ b/about.html
@@ -47,9 +47,12 @@
                                 Servicios
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="service_desarollo_web.html" data-translate="dropdownDesarrollo">Desarollo Web</a></li>
-                                <li><a class="dropdown-item" href="#" data-translate="dropdownRecursos">Recursos Humanos</a></li>
-                                <li><a class="dropdown-item" href="#" data-translate="dropdownCapacitacion">Capacitacion IT</a></li>
+                                <li><a class="dropdown-item" href="service_desarollo_web.html"
+                                        data-translate="dropdownDesarrollo">Desarollo Web</a></li>
+                                <li><a class="dropdown-item" href="#" data-translate="dropdownRecursos">Recursos
+                                        Humanos</a></li>
+                                <li><a class="dropdown-item" href="#" data-translate="dropdownCapacitacion">Capacitacion
+                                        IT</a></li>
                                 <li></li>
                             </ul>
                         </li>
@@ -57,36 +60,41 @@
                             <a class="nav-link" href="#" data-translate="navContacto">Contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" data-translate="navTrabaja">Trabaja con  <br> Nosotros</a>
+                            <a class="nav-link" href="#" data-translate="navTrabaja">Trabaja con <br> Nosotros</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#" data-translate="navBlog">BLOG</a>
                         </li>
                         <li>
-                            <!--Dropdown btn de idioma-->
-                            <div class="dropdown">
-                                <button id="languageButton" class="btn-cambio-idioma">
-                                    <img src="icons/bandera_mex.png" alt="Idioma" id="languageIcon" style="width: 40px; margin-right: 8px;">
-                                    <span id="selectedLanguage">SPA</span>
-                                    <i id="dropdownIcon" class="fa-solid fa-angle-down"></i>
-                                </button>
-                                <div id="languageDropdown" class="dropdown-content">
-                                    <a href="#" data-lang="SPA" data-flag="icons/bandera_mex.png">
-                                        <img src="icons/bandera_mex.png" alt="SPA" style="width: 40px; height:40px;">
-                                        SPA
-                                    </a>
-                                    <a href="#" data-lang="ENG" data-flag="icons/bandera_usa.png">
-                                        <img src="icons/bandera_usa.png" alt="SPA" style="width: 40px; height:40px;">
-                                        ENG</a>
-                                    <a href="#" data-lang="JPN" data-flag="icons/bandera_jpn.png">
-                                        <img src="icons/bandera_jpn.png" alt="JPN" style="width: 40px; height:40px;">
-                                        JPN</a>
+                            <div class="d-flex align-items-center gap-3">
+                                <!--Dropdown btn de idioma-->
+                                <div class="dropdown me-2">
+                                    <button id="languageButton" class="btn-cambio-idioma">
+                                        <img src="icons/bandera_mex.png" alt="Idioma" id="languageIcon"
+                                            style="width: 40px; margin-right: 8px;">
+                                        <span id="selectedLanguage">SPA</span>
+                                        <i id="dropdownIcon" class="fa-solid fa-angle-down"></i>
+                                    </button>
+                                    <div id="languageDropdown" class="dropdown-content">
+                                        <a href="#" data-lang="SPA" data-flag="icons/bandera_mex.png">
+                                            <img src="icons/bandera_mex.png" alt="SPA"
+                                                style="width: 40px; height:40px;">
+                                            SPA
+                                        </a>
+                                        <a href="#" data-lang="ENG" data-flag="icons/bandera_usa.png">
+                                            <img src="icons/bandera_usa.png" alt="SPA"
+                                                style="width: 40px; height:40px;">
+                                            ENG</a>
+                                        <a href="#" data-lang="JPN" data-flag="icons/bandera_jpn.png">
+                                            <img src="icons/bandera_jpn.png" alt="JPN"
+                                                style="width: 40px; height:40px;">
+                                            JPN</a>
+                                    </div>
                                 </div>
-                            </div>
                         </li>
                         <li>
-                            <div class="header-container">
-                                <div class="header-social-links">
+                            <div class="d-flex align-items-center gap-3 header-social-wrapper">
+                                <div class="header-social-links d-flex gap-2 align-items-center">
                                     <a href="" alt="instagram" class="red-social instagram">
                                         <i class="fa-brands fa-instagram fa-xl"></i>
                                     </a>
@@ -97,6 +105,9 @@
                                         <i class="fa-brands fa-facebook fa-xl"></i>
                                     </a>
                                 </div>
+                                <button id="toggle-dark-mode" class="btn-cambio-idioma" title="Cambiar tema">
+                                    <i id="icon-theme" class=" fa-solid fa-moon"></i>
+                                </button>
                             </div>
                         </li>
                     </ul>
@@ -293,7 +304,8 @@
                             <h3 class="section-title-card-tech" data-translate="techCardUsedIn">Usado en:</h3>
                             <div class="brand-icons">
                                 <!-- Replace with actual icon paths-->
-                                <img src="svgs/microsoft-logo.svg" alt="Microsoft" class="brand-icon" style="width: 40px;">
+                                <img src="svgs/microsoft-logo.svg" alt="Microsoft" class="brand-icon"
+                                    style="width: 40px;">
                                 <img src="svgs/google-Logo.svg" alt="Google" class="brand-icon">
                                 <img src="svgs/netflix-logo.svg" alt="Netflix" class="brand-icon">
                                 <img src="svgs/facebok-Logo.svg" alt="Facebook" class="brand-icon">
@@ -316,10 +328,10 @@
                             <img src="svgs/logo_mysql.svg" alt="MySQL" class="brand-icon">
                             <img src="svgs/logo_php.svg" alt="PHP" class="brand-icon">
                         </div>
-                         <!-- Title -->
-                         <h2 class="card-title">Laravel con MySQL Y PHP</h2>
-                        
-                         <!-- Usage Circle -->
+                        <!-- Title -->
+                        <h2 class="card-title">Laravel con MySQL Y PHP</h2>
+
+                        <!-- Usage Circle -->
                         <div class="usage-section">
                             <h3 class="section-title-card-tech" data-translate="techCardUsage">Uso Mundial</h3>
                             <div class="usage-circle-laravel">
@@ -357,7 +369,8 @@
             <div class="valores-container" data-aos="zoom-in-up">
                 <div class="valor-title">
                     <h2 data-translate="valorHonestidad">Honestidad</h2>
-                    <img src="svgs/about_us_icons/honestidad_logo.svg" alt="Honestidad" class="valor-icon honestidad-icon">
+                    <img src="svgs/about_us_icons/honestidad_logo.svg" alt="Honestidad"
+                        class="valor-icon honestidad-icon">
                 </div>
                 <div class="valor-title">
                     <h2 data-translate="valorRespeto">Respeto</h2>
@@ -369,21 +382,26 @@
                 </div>
                 <div class="valor-title">
                     <h2 data-translate="valorResponsabilidad">Responsabilidad</h2>
-                    <img src="svgs/about_us_icons/responsabilidad_logo.svg" alt="Responsabilidad" class="valor-icon responsabilidad-icon">
+                    <img src="svgs/about_us_icons/responsabilidad_logo.svg" alt="Responsabilidad"
+                        class="valor-icon responsabilidad-icon">
                 </div>
-        </div>
-        <!---MISION Y VISION -->
-        <div class="mision-vision-container" data-aos="fade-up">
-            <div class="mision-card">
-                <h2 data-translate="misionTitle">MISIÓN</h2>
-                <p data-translate="misionText">Desarrollar productos y servicios de calidad, prestando atención a los resultados precisos que nuestro cliente pretende obtener para ganarse su confianza.</p>
             </div>
-            <div class="vision-card">
-                <h2 data-translate="visionTitle">VISIÓN</h2>
-                <p data-translate="visionText">Queremos ser una marca reconocida por hacer crecer las marcas de nuestros clientes, no sólo en ventas sino también acompañándoles en la transformación tecnológica que evoluciona día a día en las empresas de cualquier tipo y al mismo tiempo ser una marca reconocida en todo el mundo por ello.</p>
+            <!---MISION Y VISION -->
+            <div class="mision-vision-container" data-aos="fade-up">
+                <div class="mision-card">
+                    <h2 data-translate="misionTitle">MISIÓN</h2>
+                    <p data-translate="misionText">Desarrollar productos y servicios de calidad, prestando atención a
+                        los resultados precisos que nuestro cliente pretende obtener para ganarse su confianza.</p>
+                </div>
+                <div class="vision-card">
+                    <h2 data-translate="visionTitle">VISIÓN</h2>
+                    <p data-translate="visionText">Queremos ser una marca reconocida por hacer crecer las marcas de
+                        nuestros clientes, no sólo en ventas sino también acompañándoles en la transformación
+                        tecnológica que evoluciona día a día en las empresas de cualquier tipo y al mismo tiempo ser una
+                        marca reconocida en todo el mundo por ello.</p>
+                </div>
             </div>
         </div>
-    </div>
     </section>
     <!--CLIENTES - SECTION-->
     <section>
@@ -476,11 +494,11 @@
                             <div class="client-logo" data-aos="fade-up">
                                 <img src="img/clients-img/gategroup.png" alt="gategroup">
                             </div>
-                        </div>     
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
     </section>
     <footer class="footer">
         <div class="container-fluid p-0">
@@ -516,6 +534,7 @@
     <script src="js/aos/aos.js"></script>
     <script src="js/bootstrap/bootstrap.bundle.min.js"></script>
     <script src="js/fontawesome/all.min.js"></script>
+    <script src="js/theme.js"></script>
     <script> AOS.init(); </script>
 </body>
 
