--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
     <link rel="stylesheet" href="./css/aos/aos.css">
     <title>Gisea Agency</title>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-D82C62QHR9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-D82C62QHR9');
+</script>
 <body>
     <header class="fixed-top">
         <nav class="navbar navbar-expand-lg estilos-navbar">
