Facebook y Linkedin conectado y Cambio en precios

--- a/about.html
+++ b/about.html
@@ -98,10 +98,11 @@
                                     <a href="" alt="instagram" class="red-social instagram">
                                         <i class="fa-brands fa-instagram fa-xl"></i>
                                     </a>
-                                    <a href="" alt="linkedin" class="red-social linkedin">
+                                    <a href="https://www.linkedin.com/in/ricardo-garrido-a2a1b167/" target="_blank"
+                                        alt="linkedin" class="red-social linkedin">
                                         <i class="fa-brands fa-linkedin fa-xl"></i>
                                     </a>
-                                    <a href="" alt="facebook" class="red-social facebook">
+                                    <a href="https://www.facebook.com/grupogisea" target="_blank" alt="facebook" class="red-social facebook">
                                         <i class="fa-brands fa-facebook fa-xl"></i>
                                     </a>
                                 </div>
@@ -236,7 +237,7 @@
                             </div>
                         </div>
                         <!-- Title -->
-                        <h2 class="card-title">CSS3 Y SASS</h2>
+                        <h2 class="card-title" data-translate="techCardCss3Sass">CSS3 Y SASS</h2>
                         <!-- Used By Section -->
                         <div class="used-by-section">
                             <h3 class="section-title-card-tech" data-translate="techCardUsedIn">Usado en:</h3>
@@ -309,7 +310,7 @@
                             </div>
                         </div>
                         <!-- Title -->
-                        <h2 class="card-title">Git y Github</h2>
+                        <h2 class="card-title" data-translate="techCardGitGithub">Git y Github</h2>
                         <!-- Used By Section -->
                         <div class="used-by-section">
                             <h3 class="section-title-card-tech" data-translate="techCardUsedIn">Usado en:</h3>
@@ -340,7 +341,7 @@
                             <img src="svgs/logo_php.svg" alt="PHP" class="brand-icon">
                         </div>
                         <!-- Title -->
-                        <h2 class="card-title">Laravel con MySQL Y PHP</h2>
+                        <h2 class="card-title" data-translate="techCardLaravel">Laravel con MySQL Y PHP</h2>
 
                         <!-- Usage Circle -->
                         <div class="usage-section">
@@ -401,8 +402,7 @@
             <div class="mision-vision-container" data-aos="fade-up">
                 <div class="mision-card">
                     <h2 data-translate="misionTitle">MISIÓN</h2>
-                    <p data-translate="misionText">Desarrollar productos y servicios de calidad, prestando atención a
-                        los resultados precisos que nuestro cliente pretende obtener para ganarse su confianza.</p>
+                    <p data-translate="misionText">Desarrollar productos, servicios de calidad y manteniendo un buen servicio y satisfacción del cliente.</p>
                 </div>
                 <div class="vision-card">
                     <h2 data-translate="visionTitle">VISIÓN</h2>
@@ -505,6 +505,9 @@
                             <div class="client-logo" data-aos="fade-up">
                                 <img src="img/clients-img/gategroup.png" alt="gategroup">
                             </div>
+                            <div class="client-logo" data-aos="fade-up">
+                                <img src="img/clients-img/soy_lia_garrido_logo.PNG" alt="Soy Lia Garrido" style="width: 120px; margin-top: -48px;">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -532,10 +535,10 @@
                     <a href="" alt="instagram" class="red-social-footer">
                         <i class="fa-brands fa-instagram fa-xl"></i>
                     </a>
-                    <a href="" alt="linkedin" class="red-social-footer">
+                    <a href="https://www.linkedin.com/in/ricardo-garrido-a2a1b167/" target="_blank" alt="linkedin" class="red-social-footer">
                         <i class="fa-brands fa-linkedin fa-xl"></i>
                     </a>
-                    <a href="" alt="facebook" class="red-social-footer">
+                    <a href="https://www.facebook.com/grupogisea" target="_blank" alt="facebook" class="red-social-footer">
                         <i class="fa-brands fa-facebook fa-xl"></i>
                     </a>
                 </div>
