--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
                                     <a href="" alt="instagram" class="red-social instagram">
                                         <i class="fa-brands fa-instagram fa-xl"></i>
                                     </a>
-                                    <a href="" alt="linkedin" class="red-social linkedin">
+                                    <a href="https://www.linkedin.com/in/ricardo-garrido-a2a1b167/" target="_blank" alt="linkedin" class="red-social linkedin">
                                         <i class="fa-brands fa-linkedin fa-xl"></i>
                                     </a>
-                                    <a href="" alt="facebook" class="red-social facebook">
+                                    <a href="https://www.facebook.com/grupogisea" target="_blank" alt="facebook" class="red-social facebook">
                                         <i class="fa-brands fa-facebook fa-xl"></i>
                                     </a>
                                 </div>
@@ -337,6 +337,9 @@
                             <div class="client-logo" data-aos="fade-up">
                                 <img src="img/clients-img/gategroup.png" alt="gategroup">
                             </div>
+                            <div class="client-logo" data-aos="fade-up">
+                                <img src="img/clients-img/soy_lia_garrido_logo.PNG" alt="Soy Lia Garrido" style="width: 120px; margin-top: -48px;">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -364,10 +367,10 @@
                     <a href="" alt="instagram" class="red-social-footer">
                         <i class="fa-brands fa-instagram fa-xl"></i>
                     </a>
-                    <a href="" alt="linkedin" class="red-social-footer">
+                    <a href="https://www.linkedin.com/in/ricardo-garrido-a2a1b167/" target="_blank" alt="linkedin" class="red-social-footer">
                         <i class="fa-brands fa-linkedin fa-xl"></i>
                     </a>
-                    <a href="" alt="facebook" class="red-social-footer">
+                    <a href="https://www.facebook.com/grupogisea" target="_blank" alt="facebook" class="red-social-footer">
                         <i class="fa-brands fa-facebook fa-xl"></i>
                     </a>
                 </div>
