Agregando cambios en banderas y carousel del index

--- a/about.html
+++ b/about.html
@@ -508,6 +508,10 @@
                             <div class="client-logo" data-aos="fade-up">
                                 <img src="img/clients-img/soy_lia_garrido_logo.PNG" alt="Soy Lia Garrido" style="width: 120px; margin-top: -48px;">
                             </div>
+                            <div class="client-logo" data-aos="fade-up">
+                                <img src="img/clients-img/eco_logo_hd.png" alt="ECO-05"
+                                    style="width: 78px; margin-top: -33px;">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -521,7 +525,10 @@
             </div>
             <div class="footer-bottom d-flex justify-content-between align-items-center">
                 <div class="footer-contact">
-                    <p>@giseamex@gmail.com</p>
+                    <a href="https://wa.me/5215511234567" target="_blank" alt="whatsapp" class="red-social-footer whatsapp-contact">
+                        <i class="fa-brands fa-whatsapp fa-xl"></i>
+                        <span class="whatsapp-text">WhatsApp</span>
+                    </a>
                 </div>
                 <ul class="footer-links">
                     <li><a href="index.html" data-translate="footerInicio">Inicio</a></li>
