--- a/service_desarollo_web.html
+++ b/service_desarollo_web.html
@@ -148,7 +148,8 @@
                                         alt="linkedin" class="red-social linkedin">
                                         <i class="fa-brands fa-linkedin fa-xl"></i>
                                     </a>
-                                    <a href="https://www.facebook.com/grupogisea" target="_blank" alt="facebook" class="red-social facebook">
+                                    <a href="https://www.facebook.com/grupogisea" target="_blank" alt="facebook"
+                                        class="red-social facebook">
                                         <i class="fa-brands fa-facebook fa-xl"></i>
                                     </a>
                                 </div>
@@ -382,7 +383,7 @@
                 </div>
                 <div class="portafolio-title clientes-hover">
                     <div class="number">
-                        <h2>9</h2>
+                        <h2>10</h2>
                         <img src="icons/bandera_usa.png" class="flag flag-usa animate__animated" />
                         <img src="icons/bandera_venezuela.png" class="flag flag-venezuela animate__animated" />
                         <img src="icons/bandera_mex.png" class="flag flag-mexico animate__animated" />
@@ -392,6 +393,7 @@
                         <img src="icons/bandera_brazil.png" class="flag flag-brazil animate_animated">
                         <img src="icons/bandera_australia.png" class="flag flag-australia animate_animated">
                         <img src="icons/bandera_italia.png" class="flag flag-italia animate_animated">
+                        <img src="icons/bandera_canada.png" class="flag flag-canada animate_animated">
                     </div>
                     <h3 data-translate="portfolioClients">Clientes</h3>
                 </div>
@@ -743,7 +745,10 @@
                 </div>
                 <div class="footer-bottom d-flex justify-content-between align-items-center">
                     <div class="footer-contact">
-                        <p>@giseamex@gmail.com</p>
+                        <a href="https://wa.me/5215511234567" target="_blank" alt="whatsapp" class="red-social-footer whatsapp-contact">
+                        <i class="fa-brands fa-whatsapp fa-xl"></i>
+                        <span class="whatsapp-text">WhatsApp</span>
+                    </a>
                     </div>
                     <ul class="footer-links">
                         <li><a href="index.html" data-translate="footerInicio">Inicio</a></li>
