Corrigiendo funcionamiento banderas

--- a/service_desarollo_web.html
+++ b/service_desarollo_web.html
@@ -384,16 +384,16 @@
                 <div class="portafolio-title clientes-hover">
                     <div class="number">
                         <h2>10</h2>
-                        <img src="icons/bandera_usa.png" class="flag flag-usa animate__animated" />
-                        <img src="icons/bandera_venezuela.png" class="flag flag-venezuela animate__animated" />
-                        <img src="icons/bandera_mex.png" class="flag flag-mexico animate__animated" />
-                        <img src="icons/bandera_jpn.png" class="flag flag-japan animate__animated" />
-                        <img src="icons/bandera_esp.png" class="flag flag-esp animate_animated">
-                        <img src="icons/bandera_argentina.png" class="flag flag-arg animate_animated">
-                        <img src="icons/bandera_brazil.png" class="flag flag-brazil animate_animated">
-                        <img src="icons/bandera_australia.png" class="flag flag-australia animate_animated">
-                        <img src="icons/bandera_italia.png" class="flag flag-italia animate_animated">
-                        <img src="icons/bandera_canada.png" class="flag flag-canada animate_animated">
+                        <img src="icons/bandera_usa.png" class="flag flag-usa animate__animated" data-bs-toggle="tooltip" title="Estados Unidos" />
+                        <img src="icons/bandera_venezuela.png" class="flag flag-venezuela animate__animated" data-bs-toggle="tooltip" title="Venezuela" />
+                        <img src="icons/bandera_mex.png" class="flag flag-mexico animate__animated" data-bs-toggle="tooltip" title="México" />
+                        <img src="icons/bandera_jpn.png" class="flag flag-japan animate__animated" data-bs-toggle="tooltip" title="Japón" />
+                        <img src="icons/bandera_esp.png" class="flag flag-esp animate_animated" data-bs-toggle="tooltip" title="España">
+                        <img src="icons/bandera_argentina.png" class="flag flag-arg animate_animated" data-bs-toggle="tooltip" title="Argentina">
+                        <img src="icons/bandera_brazil.png" class="flag flag-brazil animate_animated" data-bs-toggle="tooltip" title="Brasil">
+                        <img src="icons/bandera_australia.png" class="flag flag-australia animate_animated" data-bs-toggle="tooltip" title="Australia">
+                        <img src="icons/bandera_italia.png" class="flag flag-italia animate_animated" data-bs-toggle="tooltip" title="Italia">
+                        <img src="icons/bandera_canada.png" class="flag flag-canada animate_animated" data-bs-toggle="tooltip" title="Canadá">
                     </div>
                     <h3 data-translate="portfolioClients">Clientes</h3>
                 </div>
