Agregando RH Y Capacitacion IT

--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="service_desarollo_web.html"
                                         data-translate="dropdownDesarrollo">Desarollo Web</a></li>
-                                <li><a class="dropdown-item" href="#" data-translate="dropdownRecursos">Recursos
+                                <li><a class="dropdown-item" href="recursos_humanos.html" data-translate="dropdownRecursos">Recursos
                                         Humanos</a></li>
-                                <li><a class="dropdown-item" href="#" data-translate="dropdownCapacitacion">Capacitacion
+                                <li><a class="dropdown-item" href="capacitacion_it.html" data-translate="dropdownCapacitacion">Capacitacion
                                         IT</a></li>
                                 <li></li>
                             </ul>
@@ -371,8 +371,10 @@
                                 <img src="img/clients-img/gategroup.png" alt="gategroup">
                             </div>
                             <div class="client-logo" data-aos="fade-up">
-                                <img src="img/clients-img/soy_lia_garrido_logo.PNG" alt="Soy Lia Garrido"
-                                    style="width: 120px; margin-top: -48px;">
+                                <a href="https://soyliagarrido.com/" target="_blank" rel="noopener noreferrer">
+                                    <img src="img/clients-img/soy_lia_garrido_logo.PNG" alt="Soy Lia Garrido"
+                                        style="width: 120px; margin-top: -48px;">
+                                </a>
                             </div>
                             <div class="client-logo" data-aos="fade-up">
                                 <img src="img/clients-img/eco_logo_hd.png" alt="ECO-05"
